--- a/scripts/dataset_template.html
+++ b/scripts/dataset_template.html
@@ -26,7 +26,7 @@
     <div id="page-wrapper">
       <!-- Header -->
         <div id="header">
-          <h1><a href="index.html" id="logo">@paper_title@<br/><em>Supplementary materials</em></a></h1>
+          <h1><a href="index.html" id="logo">@paper_title@</a></h1>
           <!-- Nav -->
             <nav id="nav">
               <ul>
