[html] Fix wrong links in index template

--- a/scripts/index_template.html
+++ b/scripts/index_template.html
@@ -49,12 +49,12 @@
                   <p style="text-align: justify">This website presents supplementary materials accompanying the paper: </p>
                   <blockquote>
                   <b>@paper_title@</b><br>
-                    <a href="dl.acm.org/profile/99659912201" target="_blank" title="Chems-Eddine Himeur ACM profile">Chems-Eddine Himeur</a>,
-                      <a href="dl.acm.org/profile/99658759115" target="_blank" title="Thibault Lejemble ACM profile">Thibault Lejemble</a>,
-                      <a href="www.irit.fr/~Thomas.Pellegrini/" target="_blank" title="Thomas Pellegrini personal webpage">Thomas Pellegrini</a>,
-                      <a href="www.irit.fr/~Mathias.Paulin/" target="_blank" title="Mathias Paulin personal webpage">Mathias Paulin</a>,
-                      <a href="www.irit.fr/~Loic.Barthe/" target="_blank" title="Loic Barthe personal webpage">Loic Barthe</a>,
-                      <a href="www.irit.fr/~Nicolas.Mellado/" target="_blank" title="Nicolas Mellado personal webpage">Nicolas Mellado</a><br>
+                    <a href="http://dl.acm.org/profile/99659912201" target="_blank" title="Chems-Eddine Himeur ACM profile">Chems-Eddine Himeur</a>,
+                      <a href="http://dl.acm.org/profile/99658759115" target="_blank" title="Thibault Lejemble ACM profile">Thibault Lejemble</a>,
+                      <a href="http://www.irit.fr/~Thomas.Pellegrini/" target="_blank" title="Thomas Pellegrini personal webpage">Thomas Pellegrini</a>,
+                      <a href="http://www.irit.fr/~Mathias.Paulin/" target="_blank" title="Mathias Paulin personal webpage">Mathias Paulin</a>,
+                      <a href="http://www.irit.fr/~Loic.Barthe/" target="_blank" title="Loic Barthe personal webpage">Loic Barthe</a>,
+                      <a href="http://www.irit.fr/~Nicolas.Mellado/" target="_blank" title="Nicolas Mellado personal webpage">Nicolas Mellado</a><br>
                     CNRS, IRIT, Université de Toulouse, France. <br>
                   ACM Transactions on Graphics. Volume 41. Issue 1. February 2022. Article No.: 10. pp 1–21.
                     <a href="https://doi.org/10.1145/3481804" target="_blank">https://doi.org/10.1145/3481804</a>
@@ -67,7 +67,7 @@
                   <p style="text-align: justify">
                     The dataset webpages present interactive visualizations of our quantitative experiments and comparisons.
                     Additional plots, side-by-side comparisons high-resolution versions of the paper figures are available further on this page.
-                    Code source, building system and data of this website can be found at: <a href="github.com/STORM-IRIT/pcednet-supp" target="_blank">github.com/STORM-IRIT/pcednet-supp</a>.
+                    Code source, building system and data of this website can be found at: <a href="http://github.com/STORM-IRIT/pcednet-supp" target="_blank">github.com/STORM-IRIT/pcednet-supp</a>.
                   </p>
 
                   <p style="text-align: justify"> <b>Abstract:</b> In recent years, Convolutional Neural Networks (CNN) have proven to be efficient analysis tools for processing point clouds, e.g., for reconstruction, segmentation, and classification. In this article, we focus on the classification of edges in point clouds, where both edges and their surrounding are described. We propose a new parameterization adding to each point a set of differential information on its surrounding shape reconstructed at different scales. These parameters, stored in a Scale-Space Matrix (SSM), provide a well-suited information from which an adequate neural network can learn the description of edges and use it to efficiently detect them in acquired point clouds. After successfully applying a multi-scale CNN on SSMs for the efficient classification of edges and their neighborhood, we propose a new lightweight neural network architecture outperforming the CNN in learning time, processing time, and classification capabilities. Our architecture is compact, requires small learning sets, is very fast to train, and classifies millions of points in seconds.</p>
@@ -101,7 +101,7 @@
                   <ul class='two-c'>
                     @method_list@
                   </ul>
-                  <p>Please refer to the paper for technical defails and references.</p>
+                  <p>Please refer to the paper for technical details and references.</p>
 
                   <h3>Experiments</h3>
                   <ul class='two-c'>
