[html] Add meta tags

--- a/scripts/index_template.html
+++ b/scripts/index_template.html
@@ -9,6 +9,9 @@
     <title>@paper_title@</title>
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+    <meta name="author"   content="Nicolas Mellado">
+    <meta name="description" content="Project page for PCEDNet: A Lightweight Neural Network for Fast and Interactive Edge Detection in 3D Point Clouds">
+    <meta name="keywords" content="PCEDNet, Deep Learning, Point cloud, Edge Detection, 3D, Lidar, Interactive Learning">
     <link rel="stylesheet" href="assets/css/main.css" />
     <link rel="stylesheet" href="assets/css/before-after.min.css" />
 
