Add software page

--- a/scripts/index_template.html
+++ b/scripts/index_template.html
@@ -32,6 +32,7 @@
             <nav id="nav">
               <ul>
                 <li class="current"><a href="index.html">Home</a></li>
+                <li><a href="software.html">Software</a></li>
                 <li><a href="default.html">Default Dataset</a></li>
                 <li><a href="abc.html">ABC Dataset</a></li>
                 <li><a href="abc_noise_0.04.html">ABC Dataset (with noise)</a></li>
