--- a/scripts/dataset_template.html
+++ b/scripts/dataset_template.html
@@ -34,6 +34,7 @@
             <nav id="nav">
               <ul>
                 <li><a href="index.html">Home</a></li>
+                <li><a href="software.html">Software</a></li>
                 <li class="@title_page_class1@"><a href="default.html">Default Dataset</a></li>
                 <li class="@title_page_class2@"><a href="abc.html">ABC Dataset</a></li>
                 <li class="@title_page_class3@"><a href="abc_noise_0.04.html">ABC Dataset (with noise)</a></li>
