Add release list to software page

--- a/scripts/software_template.html
+++ b/scripts/software_template.html
@@ -50,17 +50,7 @@
           <div id="content">
             <!-- Content -->
 
-            <article>
-              <p style="text-align: justify">Precompiled binaries will be made available for non-commercial use.
-                Please contact Nicolas Mellado for any other request.</p>
-              <h2>Download links</h2>
-              <ul>
-                <li><b>Linux (Debian, Ubuntu)</b>: Coming soon</li>
-                <li><b>MacOSX (Big Sur)</b>: Coming soon</li>
-                <li><b>Windows</b>: Coming soon</li>
-              </ul>
-            </article>
-            <article>
+            @release_list@
               <h2>Gallery</h2>
             <iframe width="30%" src="https://www.youtube.com/embed/jbsxPCLrfuM" title="PCEDNet: Classifier demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
