--- a/scripts/software_template.html
+++ b/scripts/software_template.html
@@ -51,6 +51,7 @@
             <!-- Content -->
 
             @release_list@
+            <article>
               <h2>Gallery</h2>
             <iframe width="30%" src="https://www.youtube.com/embed/jbsxPCLrfuM" title="PCEDNet: Classifier demo" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
             </article>
