[html] Software: add disclaimer, bug report procedure and resources link

--- a/scripts/software_template.html
+++ b/scripts/software_template.html
@@ -49,6 +49,11 @@
         <div class="container">
           <div id="content">
             <!-- Content -->
+            <article>
+              <p style="text-align: justify; margin-bottom:0px;"><b>Disclaimer</b>:The licensed software "as is," and makes no express or implied warranty of any kind. PCEDNet authors specifically disclaims all indirect or implied warranties to the full extent allowed by applicable law, including without limitation all implied warranties of, non-infringement, merchantability, title or fitness for any particular purpose. No oral or written information or advice given by the authors shall create a warranty.</p>
+              <p style="text-align: justify; margin-bottom:0px;"><b>Bug reports</b>: Please report bugs at: <a title="Report issue" href="https://github.com/STORM-IRIT/pcednet-supp/issues">https://github.com/STORM-IRIT/pcednet-supp/issues</a>.</p>
+              <p style="text-align: justify; margin-bottom:0px;"><b>Resources</b>: This demo requires pretrained networks (<a title="Download PCEDNet pretrained networks" href="https://bit.ly/3Ntb062">clic here to download</a>).</p>
+            </article>
 
             @release_list@
             <article>
