[html] fix typo

--- a/scripts/software_template.html
+++ b/scripts/software_template.html
@@ -52,7 +52,7 @@
             <article>
               <h2>Replicability</h2>
               <p style="text-align: justify; margin-bottom:0px;">We provide pre-compiled binaries allowing to replicate materials used in Figures: 1.b, 7, 15, 17, 18, 19, Tables 4, 7, 8.</p>
-              <p style="text-align: justify; margin-bottom:0px;"><b>Disclaimer</b>:The licensed software "as is," and makes no express or implied warranty of any kind. PCEDNet authors specifically disclaims all indirect or implied warranties to the full extent allowed by applicable law, including without limitation all implied warranties of, non-infringement, merchantability, title or fitness for any particular purpose. No oral or written information or advice given by the authors shall create a warranty.</p>
+              <p style="text-align: justify; margin-bottom:0px;"><b>Disclaimer</b>:>We provide the licensed software "as is," and makes no express or implied warranty of any kind. PCEDNet authors specifically disclaims all indirect or implied warranties to the full extent allowed by applicable law, including without limitation all implied warranties of, non-infringement, merchantability, title or fitness for any particular purpose. No oral or written information or advice given by the authors shall create a warranty.</p>
               <p style="text-align: justify; margin-bottom:0px;"><b>Resources</b>: download zip file containing a pre-compiled software reproducing the figures material, a python script downloading the assets and calling the software. [<a title="Download replicability material for PCEDNet (linux, debian based)" href="https://www.irit.fr/STORM/site/files-web/demos/2022-pcednet/pced-replicability-debian.zip">Linux (debian based)</a>].</p>
               <p style="text-align: justify; margin-bottom:0px;"><b>Usage</b>:</p>
               <ol>
@@ -78,7 +78,7 @@
 
             <article>
               <h2>Standalone demo</h2>
-              <p style="text-align: justify; margin-bottom:0px;"><b>Disclaimer</b>:The licensed software "as is," and makes no express or implied warranty of any kind. PCEDNet authors specifically disclaims all indirect or implied warranties to the full extent allowed by applicable law, including without limitation all implied warranties of, non-infringement, merchantability, title or fitness for any particular purpose. No oral or written information or advice given by the authors shall create a warranty.</p>
+              <p style="text-align: justify; margin-bottom:0px;"><b>Disclaimer</b>:We provide the licensed software "as is," and makes no express or implied warranty of any kind. PCEDNet authors specifically disclaims all indirect or implied warranties to the full extent allowed by applicable law, including without limitation all implied warranties of, non-infringement, merchantability, title or fitness for any particular purpose. No oral or written information or advice given by the authors shall create a warranty.</p>
               <p style="text-align: justify; margin-bottom:0px;"><b>Bug reports</b>: Please report bugs at: <a title="Report issue" href="https://github.com/STORM-IRIT/pcednet-supp/issues">https://github.com/STORM-IRIT/pcednet-supp/issues</a>.</p>
               <p style="text-align: justify; margin-bottom:0px;"><b>Resources</b>: This demo requires pretrained networks (<a title="Download PCEDNet pretrained networks" href="https://bit.ly/3Ntb062">clic here to download</a>).</p>
             </article>
